[package]
name = "mycelium-mlir"
version = "0.0.0"
description = "AOT path — textual ternary-dialect skeleton + env-machine model + a direct-LLVM-IR backend that compiles the bit subset to native code via llc/clang (RFC-0004 §2 direct-LLVM fallback; ADR-007; T1.5). M-150/M-301. The MLIR dialect lowering is deferred until libMLIR is present."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
# `mlir-dialect` (OFF by default) turns on the **real** `ternary`→`arith`/`func`→LLVM dialect
# lowering (M-601; RFC-0004 §2; ADR-009/ADR-019): `dialect::compile_and_run` emits a genuine MLIR
# module in the `arith`/`func` dialects and drives it through `mlir-opt-<v>` + `mlir-translate-<v>`
# (version-matched to the installed LLVM major) to real LLVM IR, then `clang` → native → read-back.
# It needs the libMLIR tools (`scripts/setup-mlir.sh`; ADR-019) — but, like the existing
# `llc`/`clang` path, it **probes for them at runtime and skips gracefully** when absent, so even
# `cargo test --features mlir-dialect` is green on a box without the tools (each test sees
# `DialectError::ToolchainMissing` and returns). The default build/test path is unchanged: with the
# feature OFF the dialect module exposes only the textual skeleton (no native MLIR invocation). The
# trusted base remains the interpreter (NFR-7); this feature is the perf/inspectability path.
mlir-dialect = []

[dependencies]
mycelium-core = { path = "../mycelium-core" }
mycelium-interp = { path = "../mycelium-interp" }
# MEM-4 wiring (DN-33 / RFC-0027 §9): the RC-annotated IR + static analysis, and the runtime
# reclamation-record contract the AOT tier emits the §9 audit trail into. Both are upstream of
# `mlir` (they depend only on core / std-core / interp) — the dependency graph stays a DAG.
mycelium-mir-passes = { path = "../mycelium-mir-passes" }
mycelium-std-runtime = { path = "../mycelium-std-runtime" }

[dev-dependencies]
# The interp↔AOT differential (M-151) drives both paths with the certified binary↔ternary swap,
# and since M-210 validates each pair through the shared TV checker (Certificate from numerics).
mycelium-cert = { path = "../mycelium-cert" }
mycelium-numerics = { path = "../mycelium-numerics" }
# The E3 wrong-layout differential (M-251) drives the layout chosen by the M-250 packing selector.
mycelium-select = { path = "../mycelium-select" }
