[package]
name = "mycelium-mlir"
version = "0.0.0"
description = "AOT path — textual ternary-dialect skeleton + env-machine model + a direct-LLVM-IR backend that compiles the bit subset to native code via llc/clang (RFC-0004 §2 direct-LLVM fallback; ADR-007; T1.5). M-150/M-301. The MLIR dialect lowering is deferred until libMLIR is present."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
# `mlir-dialect` (OFF by default) turns on the **real** `ternary`→`arith`/`func`→LLVM dialect
# lowering (M-601; RFC-0004 §2; ADR-009/ADR-019): `dialect::compile_and_run` emits a genuine MLIR
# module in the `arith`/`func` dialects and drives it through `mlir-opt-<v>` + `mlir-translate-<v>`
# (version-matched to the installed LLVM major) to real LLVM IR, then `clang` → native → read-back.
# It needs the libMLIR tools (`scripts/setup-mlir.sh`; ADR-019) — but, like the existing
# `llc`/`clang` path, it **probes for them at runtime and skips gracefully** when absent, so even
# `cargo test --features mlir-dialect` is green on a box without the tools (each test sees
# `DialectError::ToolchainMissing` and returns). The default build/test path is unchanged: with the
# feature OFF the dialect module exposes only the textual skeleton (no native MLIR invocation). The
# trusted base remains the interpreter (NFR-7); this feature is the perf/inspectability path.
mlir-dialect = []

# `bitnet-accel` (OFF by default) is the **explicit capability flag** that enables BitNet-class
# packed-ternary acceleration (M-728; FR-C3; RFC-0029 §7.4). With the feature OFF the
# `accel::accelerated_ternary_dot` entry point performs **explicit, recorded graceful degradation**
# to the reference ternary dot (`bitnet::ternary_dot_ref`) — never a silent slow path: the returned
# `AccelOutcome` records `Path::Reference` and an `EXPLAIN`-able reason (G2). With the feature ON it
# *additionally* requires the runtime capability (a present `clang` JIT toolchain) to engage the
# compiled kernel; if the runtime capability is absent it **also** degrades explicitly and records it.
# So the accel path is engaged iff (compile-time feature ON) AND (runtime capability present) — and
# every other case is a never-silent, recorded fallback to the reference path. Correctness:
# accelerated == reference ternary (Empirical, `tests/bitnet_accel.rs`). It depends on the M-360
# `bitnet` kernels, which already probe `clang` and skip gracefully when absent.
bitnet-accel = []

[dependencies]
mycelium-core = { path = "../mycelium-core" }
# M-853 (RFC-0039 §5.1): the native Dense codegen (`dense_codegen.rs`) is differential-checked against
# `mycelium-dense` (the trusted-base reference); it imports the reference's per-op relative-ε
# constants (`F32_OP_REL_EPS`/`BF16_OP_REL_EPS`/`DENSE_MIN_NORMAL`) so the native bound it stamps is
# the *same* value, never a divergent literal (DRY/VR-5). No cycle: `mycelium-dense` does not depend on
# `mycelium-mlir`.
mycelium-dense = { path = "../mycelium-dense" }
# M-854 (RFC-0039 §5.2): the native VSA codegen (`vsa_codegen.rs`) is differential-checked against
# `mycelium-vsa` (the trusted-base reference) for the 1.0.0-mandatory MAP-I/BSC/HRR/FHRR models; it
# imports the reference's `capacity::proven_capacity_bound` so the single-op MAP-I bundle Proven bound
# is the *same* checked side-condition (never a divergent literal — DRY/VR-5), and refuses SBC/MAP-B
# never-silently. No cycle: `mycelium-vsa` depends only on `mycelium-core`/`mycelium-select`, never on
# `mycelium-mlir`.
mycelium-vsa = { path = "../mycelium-vsa" }
mycelium-interp = { path = "../mycelium-interp" }
# MEM-4 wiring (DN-33 / RFC-0027 §9): the RC-annotated IR + static analysis, and the runtime
# reclamation-record contract the AOT tier emits the §9 audit trail into. Both are upstream of
# `mlir` (they depend only on core / std-core / interp) — the dependency graph stays a DAG.
mycelium-mir-passes = { path = "../mycelium-mir-passes" }
# M-860: the parallel per-function/per-nodule AOT codegen (`emit_llvm_ir_many`) dispatches across
# `mycelium_std_runtime::scheduler::Scheduler` — the M-861 work-stealing OS-thread pool — so it
# reuses this existing dependency and adds no new one (maintainer decision 2026-07-01, grounded in
# the flag against pulling in `rayon`).
mycelium-std-runtime = { path = "../mycelium-std-runtime" }
# M-865: the harness-level AOT/JIT concurrent-batch dispatch (`concurrent.rs`) submits its argument
# jobs directly through `mycelium_sched::scheduler::Scheduler` — the same relocated M-861/M-864
# work-stealing pool `mycelium-interp`'s own M-862 parallel-eval path and this crate's M-860
# `emit_llvm_ir_many` (via the `mycelium-std-runtime` re-export above) both already dispatch through.
# Depending on it directly adds no new scheduler surface and no cycle (`mycelium-sched` sits below
# `mycelium-interp`, which this crate already depends on).
mycelium-sched = { path = "../mycelium-sched" }

[dev-dependencies]
# The interp↔AOT differential (M-151) drives both paths with the certified binary↔ternary swap,
# and since M-210 validates each pair through the shared TV checker (Certificate from numerics).
mycelium-cert = { path = "../mycelium-cert" }
mycelium-numerics = { path = "../mycelium-numerics" }
# The E3 wrong-layout differential (M-251) drives the layout chosen by the M-250 packing selector.
mycelium-select = { path = "../mycelium-select" }
# M-853 (RFC-0039 §5.1): the Dense three-way differential (`tests/dense_differential.rs`) uses
# `DenseSpace` directly as the reference the native Dense codegen is checked against (the interpreter
# has no `dense.*` prims — Dense is a standalone operational surface, like the cert swap). Already a
# regular dependency above; listed in dev-deps is unnecessary (it is in scope for tests transitively).
