[package]
name = "mycelium-std-fmt"
version = "0.0.0"
description = "std.fmt — dual human/machine formatting/display (G11)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { path = "../mycelium-core" }
mycelium-std-core = { path = "../mycelium-std-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
