[package]
name = "mycelium-std-io"
version = "0.0.0"
description = "std.io + serialize — single-consumption IO + canonical serialization."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { path = "../mycelium-core" }
mycelium-std-core = { path = "../mycelium-std-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# property tests for the round-trip bound; MSRV 1.92-compatible
proptest = "1"
