[package]
name = "mycelium-std-recover"
version = "0.0.0"
description = "std.recover — the declarative recovery bridge (Outcome / PolicyRef; every error recovered or re-propagated, never dropped) over the mycelium-diag record (M-520, Rust-first half)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { path = "../mycelium-core" }
mycelium-std-core = { path = "../mycelium-std-core" }
mycelium-diag = { path = "../mycelium-diag" }
mycelium-interp = { path = "../mycelium-interp" }
blake3 = "1"
