[package]
name = "mycelium-std-runtime"
version = "0.0.0"
description = "std.runtime — the fungal concurrency surface (M-521 / ADR-020): Colony, Scope, Task, Network, and the v0 R1 guarantee matrix."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { path = "../mycelium-core" }
mycelium-std-core = { path = "../mycelium-std-core" }
# E12-1 (M-713): reuse the M-356 supervision/cancellation composition kernel (CancelToken,
# TaskOutcome, Supervisor) — no cycle (mycelium-interp depends only on core + numerics).
mycelium-interp = { path = "../mycelium-interp" }

[dev-dependencies]
# Property-based testing for the RT2 sequentialization + liveness + backpressure differentials.
proptest = "1"
