[package]
name = "mycelium-std-spore"
version = "0.0.0"
description = "std.spore — the content-addressed deployable + reconstruction-manifest library surface over the mycelium-spore packager (M-522)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { path = "../mycelium-core" }
mycelium-std-core = { path = "../mycelium-std-core" }
mycelium-std-content = { path = "../mycelium-std-content" }
mycelium-std-vsa = { path = "../mycelium-std-vsa" }
mycelium-spore = { path = "../mycelium-spore" }
