[package]
name = "mycelium-tero"
version = "0.0.0"
description = "mycelium-tero — the transparent memory substrate & agent knowledge API (DN-87 / E39-1): the corpus as a generated, provenance-carrying encoding (deterministic structured index + a VSA semantic layer), served platform-agnostically. Named in quiet homage to Atsushi Tero, for his contribution to science and engineering."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# DRY (house rule #5): the docs/ + research/ markdown families REUSE `mycelium-doc`'s existing
# CommonMark-subset corpus parser (`corpus::ingest` → the section tree, anchors, provenance) rather
# than growing a second, parallel markdown heuristic (M-1015 DN-87 §2.1). Everything reused
# (`corpus::{ingest, slugify, AnchorAlloc}`, `ir::{Node, Payload, SourceKind, Level}`) is already
# `pub` — this crate needs NO widening of the `mycelium-doc` public surface.
mycelium-doc = { path = "../mycelium-doc" }
# The machine index (`docs/tero-index/index.json`) + its stable serialization. Workspace-pinned;
# no new external dependency (serde/serde_json are already vetted, in-workspace).
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]

[[bin]]
name = "tero-index"
path = "src/bin/tero-index.rs"
