[package]
name = "mycelium-vsa"
version = "0.0.0"
description = "VSA submodule: VsaModel trait + MAP-I algebra, dependency-gated (RFC-0003; ADR-008). M-130."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { path = "../mycelium-core" }
# RFC-0010: the one RFC-0005 selection mechanism, reused for the decode-method site (no parallel
# selector). Acyclic — mycelium-select depends only on mycelium-core.
mycelium-select = { path = "../mycelium-select" }

[dev-dependencies]
# Manifest/value wire round-trip tests (M-260); the on-the-wire form is JSON (M-104).
serde_json = "1"
