[package]
name = "mycelium-workstack"
version = "0.0.0"
description = "The shared recursion-budget + guarded-stack leaf for RFC-0041 (W1). Home of the never-silent `RecursionBudget` (depth on the §4.0 metric + memory ceiling + work-step budget), the canonical over-budget `BudgetError` surface (`DepthExceeded`/`OutOfBudget`), the consumer-side RAII charging (`DepthGuard`, `charge_bytes`/`charge_steps`), the process-wide arena, and a thin `ensure_sufficient_stack` guard helper. A `#![forbid(unsafe_code)]` LEAF, downward-only per DN-68: it exposes only counters/limits and depends on nothing upward (no interp/core/l1) — charging happens consumer-side. It is NOT a universal `WorkStack<Frame>`; each machine keeps its own frame shape (RFC-0041 §4.1)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Downward-only (DN-68): std + the host-stack adapter leaf ONLY. Never `mycelium-interp`/`-core`/`-l1`
# — those are UPWARD; the leaf exposes counters/limits and the charge happens consumer-side (§4.1).
mycelium-stack = { path = "../mycelium-stack" }

[dev-dependencies]
# TEST-ONLY (never a library dep — DN-68 downward-only holds for the lib): the frame-size CI baseline
# (RFC-0041 §4.2) pins `size_of` of the machines' value/frame structs so a toolchain frame-size bump
# fails CI, not production (the ADR-041 lesson). A dev-dependency on these UPWARD crates is a permitted
# cargo dev-dependency back-edge (it does not affect the library's acyclic graph); the lib itself still
# depends on nothing upward. `mycelium-mlir`'s aot `Frame`/`AotVal`/`Env` are private, so its baseline
# is pinned in-crate (FLAGged to the integrator) — here we pin the publicly-reachable value structs.
mycelium-core = { path = "../mycelium-core" }
mycelium-l1 = { path = "../mycelium-l1" }
